...
            }

            is InlineMath -> {
                // 行内数学公式渲染器
                // EXAMPLE:
                // $1/2$
                // <img eeimg="1" src="//www.zhihu.com/equation?tex=1%2F2" alt="1/2" />
                val tex = node.literal.trim()
                val alt = escapeHtmlAttribute(tex.replace(Regex("[\n\r]+"), " "))
                val encoded = tex.encodeURLParameter(spaceToPlus = false)
                out
                    .append("<img eeimg=\"1\" src=\"//www.zhihu.com/equation?tex=")
                    .append(encoded)
...
